ecmascript/parser/tests/typescript-errors/issue-2343/1/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/issue-2343/1/input.ts:1:9
  |
1 | declare declare
  |         ^^^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/issue-2343/1/input.ts:1:1
  |
1 | declare declare
  | ^^^^^^^

